// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`in-unary-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


// https://github.com/estree/estree/blob/96fee942ecc2b3b9d3c34163ec142b75daf4cca1/es5.md#unaryoperator
[
!(
  //
  octahedralAnteaterGenerator ||
  //
  stellatedFossilProcessor
),
-(
  //
  octahedralAnteaterGenerator ||
  //
  stellatedFossilProcessor
),
+(
  //
  octahedralAnteaterGenerator ||
  //
  stellatedFossilProcessor
),
typeof (
  //
  octahedralAnteaterGenerator ||
  //
  stellatedFossilProcessor
),
void (
  //
  octahedralAnteaterGenerator ||
  //
  stellatedFossilProcessor
),
];

=====================================output=====================================
// https://github.com/estree/estree/blob/96fee942ecc2b3b9d3c34163ec142b75daf4cca1/es5.md#unaryoperator
[
  !(
    //
    octahedralAnteaterGenerator ||
      //
      stellatedFossilProcessor
  ),
  -(
    //
    octahedralAnteaterGenerator ||
      //
      stellatedFossilProcessor
  ),
  +(
    //
    octahedralAnteaterGenerator ||
      //
      stellatedFossilProcessor
  ),
  typeof (
    //
    octahedralAnteaterGenerator ||
      //
      stellatedFossilProcessor
  ),
  void (
    //
    octahedralAnteaterGenerator ||
      //
      stellatedFossilProcessor
  ),
];

================================================================================
`;

exports[`issue-7024.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const radioSelectedAttr =
  (isAnyValueSelected &&
    node.getAttribute(radioAttr.toLowerCase()) === radioValue) ||
  ((!isAnyValueSelected && values[a].default === true) || a === 0);

=====================================output=====================================
const radioSelectedAttr =
  (isAnyValueSelected &&
    node.getAttribute(radioAttr.toLowerCase()) === radioValue) ||
  (!isAnyValueSelected && values[a].default === true) ||
  a === 0;

================================================================================
`;

exports[`logical-expression-operators.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Same operators do not require parens
(foo && bar) && baz;
foo && (bar && baz);
foo && ((bar && baz) && qux);
foo && (bar && (baz && qux));
foo && (bar && ((baz && qux) && xyz));
foo && (bar && (baz && (qux && xyz)));

(foo || bar) || baz;
foo || (bar || baz);
foo || ((bar || baz) || qux);
foo || (bar || (baz || qux));
foo || (bar || ((baz || qux) || xyz));
foo || (bar || (baz || (qux || xyz)));

(foo ?? bar) ?? baz;
foo ?? (bar ?? baz);
foo ?? ((bar ?? baz) ?? qux);
foo ?? (bar ?? (baz ?? qux));
foo ?? (bar ?? ((baz ?? qux) ?? xyz));
foo ?? (bar ?? (baz ?? (qux ?? xyz)));

// Explicitly parenthesized && and || requires parens
(foo && bar) || baz;
(foo || bar) && baz;

foo && (bar || baz);
foo || (bar && baz);

// Implicitly parenthesized && and || requires parens
foo && bar || baz;
foo || bar && baz;

=====================================output=====================================
// Same operators do not require parens
foo && bar && baz;
foo && bar && baz;
foo && bar && baz && qux;
foo && bar && baz && qux;
foo && bar && baz && qux && xyz;
foo && bar && baz && qux && xyz;

foo || bar || baz;
foo || bar || baz;
foo || bar || baz || qux;
foo || bar || baz || qux;
foo || bar || baz || qux || xyz;
foo || bar || baz || qux || xyz;

foo ?? bar ?? baz;
foo ?? bar ?? baz;
foo ?? bar ?? baz ?? qux;
foo ?? bar ?? baz ?? qux;
foo ?? bar ?? baz ?? qux ?? xyz;
foo ?? bar ?? baz ?? qux ?? xyz;

// Explicitly parenthesized && and || requires parens
(foo && bar) || baz;
(foo || bar) && baz;

foo && (bar || baz);
foo || (bar && baz);

// Implicitly parenthesized && and || requires parens
(foo && bar) || baz;
foo || (bar && baz);

================================================================================
`;
